# minimmerflow

./: .gitignore  CMakeLists.txt  README
res/: profile.unrolled.constants.ncu-rep  profile.unrolled.ncu-rep  profile.unrolled.nested_functions.ncu-rep  profile.unrolled.reworked.ncu-rep  profile.unrolled.stride.ncu-rep
src/: .euler.cu.swo  CMakeLists.txt  adaptation.cpp  adaptation.cu  adaptation.hcu  adaptation.hpp  body.cpp  body.hpp  communications.cpp  communications.cu  communications.hcu  communications.hpp  communications.tcu  communications.tpp  compiler.hpp  computation_info.cpp  computation_info.cu  computation_info.hpp  constants.cu  constants.hcu  constants.hpp  containers.cpp  containers.cu  containers.hcu  containers.hpp  containers.tcu  containers.tpp  context.cpp  context.hpp  cudaKernels.cu  cudaKernels.h  euler.cpp  euler.cu  euler.cuh  euler.hcu  euler.hpp  euler.tcu  fieldMapper.cpp  fieldMapper.cu  fieldMapper.hcu  (+45 more)
src/kernels/: cudaKernels.cu  cudaKernels.h  euler.cu
test/: CMakeLists.txt  test_driver.py
test/2dIsentropicVortex/: CMakeLists.txt  settings.xml
test/2dIsentropicVortex_2ndOrder/: CMakeLists.txt  settings.xml
test/2dRadSod/: CMakeLists.txt  settings.xml
test/3dIsentropicVortexXY/: CMakeLists.txt  settings.xml
test/3dIsentropicVortexXY_2ndOrder/: CMakeLists.txt  settings.xml
test/3dIsentropicVortexYZ/: CMakeLists.txt  settings.xml
test/3dIsentropicVortexYZ_2ndOrder/: CMakeLists.txt  settings.xml
test/3dRadSod/: CMakeLists.txt  settings.xml
